Fixed text alignment styling with flexbox

--- a/packages/core/src/editor.module.css
+++ b/packages/core/src/editor.module.css
@@ -37,6 +37,8 @@ Tippy popups that are appended to document.body directly
 .defaultStyles h2,
 .defaultStyles h3,
 .defaultStyles li {
+  all: unset !important;
+  flex-grow: 1 !important;
   margin: 0;
   padding: 0;
   font-size: inherit;
